# centerspace

./: ALL_BUILD.vcxproj  CMakeLists.txt  CenterSpace librocket.vcxproj  CenterSpace.sln  CenterSpace.vcxproj  CenterSpace.vcxproj.filters  LICENSE  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aiscript.lua  cmake_install.cmake  ogre.cfg  quakemap_d.cfg  resources.cfg  resources_d.cfg  samples_d.cfg  terrain.txt  test.lua
AI/: AIGroup.cpp  AIGroup.h  CoverageMap.cpp  CoverageMap.h  GroupAttackOrder.cpp  GroupAttackOrder.h  GroupMoveOrder.cpp  GroupMoveOrder.h  GroupMoveToAttackOrder.cpp  GroupMoveToAttackOrder.h  GroupOrder.cpp  GroupOrder.h  MCUOrderStatus.cpp  MCUOrderStatus.h
BtOgre/: BtOgre.cpp  BtOgreExtras.h  BtOgreGP.h
Controllers/: KinematicCharacterController.cpp  KinematicCharacterController.h  MCUAnimationController.cpp  MCUAnimationController.h  MCUController.cpp  MCUController.h
Entities/: BattlefieldGrid.cpp  BattlefieldGrid.h  BattlefieldGridCell.cpp  BattlefieldGridCell.h  BeamProjectile.cpp  BeamProjectile.h  DataProvider.cpp  DataProvider.h  DataSet.cpp  DataSet.h  DataSource.cpp  DataSource.h  Enums.h  Explosion.cpp  Explosion.h  ExplosionSet.cpp  ExplosionSet.h  FogSquare.cpp  FogSquare.h  GridSquare.cpp  GridSquare.h  GridSquareJoinChecker.cpp  GridSquareJoinChecker.h  GridSquareJoinTemplate.cpp  GridSquareJoinTemplate.h  GridSquareTemplate.cpp  GridSquareTemplate.h  GridSquareTemplateVector.cpp  GridSquareTemplateVector.h  GridSquareVector.cpp  GridSquareVector.h  MCUComponent.cpp  MCUComponent.h  MCUPlacement.h  MechanizedCombatUnit.cpp  MechanizedCombatUnit.h  Mission.cpp  Mission.h  MovableEntity.h  PathFindingNode.cpp  (+15 more)
GUI/: BetweenTurnsHUD.rml  CampaignElement.cpp  CampaignElement.h  CenterSpace.rcss  DataBoundCssProperty.cpp  DataBoundCssProperty.h  DataBoundElement.cpp  DataBoundElement.h  DataBoundImageElement.cpp  DataBoundImageElement.h  DataBoundListElement.cpp  DataBoundListElement.h  DataBoundListItemElement.cpp  DataBoundListItemElement.h  DataBoundTextElement.cpp  DataBoundTextElement.h  DataProviderElement.cpp  DataProviderElement.h  FileInterfaceOgre3D.cpp  FileInterfaceOgre3D.h  InBattleHUD - Copy.rml  InBattleHUD.rml  LuaRocketEventInstancer.cpp  LuaRocketEventInstancer.h  LuaScriptElement.cpp  LuaScriptElement.h  MCUComponentSelect.rml  MCUEdit.rml  MCUSelectEdit.rml  MainBase.rml  MainMenu.rml  MultiPlayer.rml  Options.rml  PostBattle.rml  ProfileMain.rml  RenderInterfaceOgre3D.cpp  RocketDocumentDefinition.cpp  RocketDocumentDefinition.h  RocketDocuments.cpp  RocketDocuments.h  (+7 more)
Game/: BaseApplication.cpp  BaseApplication.h  Main.cpp
Input/: InputListener.cpp  InputListener.h
LuaBindings/: AIGroup.pkg  AIGroupTemplate.pkg  AIGroupTemplateRepository.pkg  AIGroupTemplateRepositoryLoader.pkg  AIMCUTemplate.pkg  AIMCUTemplateRepository.pkg  AIMCUTemplateRepositoryLoader.pkg  AnimationDefinitionTemplate.pkg  AnimationDefinitionTemplateDataLoader.pkg  ArmorTemplate.pkg  ArmorTemplateRepository.pkg  ArmorTemplateRepositoryLoader.pkg  BatteryTemplate.pkg  BatteryTemplateRepository.pkg  BatteryTemplateRepositoryLoader.pkg  BattlefieldGrid.pkg  BattlefieldGridCell.pkg  BattlefieldTemplate.pkg  BattlefieldTemplateRepository.pkg  BattlefieldTemplateRepositoryLoader.pkg  BeamProjectile.pkg  BeamProjectileTemplate.pkg  BeamProjectileTemplateRepository.pkg  BeamProjectileTemplateRepositoryLoader.pkg  CampaignMissionManager.pkg  CampaignState.pkg  CenterSpace.hpp  CenterSpace.pkg  CoverageMap.pkg  DataSet.pkg  DriveTemplate.pkg  DriveTemplateRepository.pkg  DriveTemplateRepositoryLoader.pkg  Enums.pkg  FactionHubTemplate.pkg  FactionHubTemplateRepository.pkg  FactionHubTemplateRepositoryLoader.pkg  FactionTemplate.pkg  FactionTemplateRepository.pkg  FactionTemplateRepositoryLoader.pkg  (+100 more)
LuaLibRocket/: LuaDocument.cpp  LuaDocument.h  LuaElement.cpp  LuaElement.h  LuaElementCache.cpp  LuaElementCache.h
Managers/: CampaignMissionManager.cpp  CampaignMissionManager.h  DbNames.cpp  DbNames.h  GameManager.cpp  GameManager.h  InGameCamera.cpp  InGameCamera.h  LuaStateManager.cpp  LuaStateManager.h  NetworkManager.h  PathFindingManager.cpp  PathFindingManager.h  PhysicsManager.cpp  PhysicsManager.h  RandomMissionGenerator.cpp  RandomMissionGenerator.h  (+2 more)
(+528 files in other folders)
